update readme file.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//lib/me/huqiao/algs4/stdlib/StdDraw.java=UTF-8
 encoding//lib/me/huqiao/algs4/stdlib/StdStats.java=UTF-8
+encoding/README.md=UTF-8
